# mc2

./: .gitignore  .ocamlinit  .travis.yml  Makefile  README.md  dune-project  index.html  jbuild-workspace  jbuild-workspace.dev  mc2.opam
doc/: prover_description.txt
mc2/: index.html
mc2.backend/: index.html
mc2.core/: index.html
mc2.dimacs/: index.html
mc2.lra/: index.html
mc2.propositional/: index.html
mc2.smtlib/: index.html
mc2.uf/: index.html
mc2.unin_sort/: index.html
src/: .merlin  dune  jbuild  main.ml
src/backend/: .merlin  Dot.ml  coq.ml  coq.ml.old  coq.mli  coq.mli.old  dedukti.ml.old  dedukti.mli  dedukti.mli.old  dimacs.ml  dimacs.ml.old  dimacs.mli  dimacs.mli.old  dot.ml  dot.mli  dune  jbuild
src/core/: .merlin  Actions.ml  Actions.mli  Assignment.ml  Assignment.mli  Atom.ml  Atom.mli  Bound_var.ml  Bound_var.mli  Builtins.ml  Builtins.mli  Clause.ml  Clause.mli  Error.ml  Heap.ml  Heap_intf.ml  Het_map.ml  Het_map.mli  ID.ml  ID.mli  Internal.ml  Internal.mli  Lemma.ml  Lemma.mli  Log.ml  Mc2_core.ml  Paramod.ml  Paramod.mli  Paramod_clause.ml  Paramod_clause.mli  Plugin.ml  Plugin.mli  Plugin_db.ml  Plugin_db.mli  Plugin_intf.ml  Plugins.ml  Plugins.mli  Premise.ml  Premise.mli  Proof.ml  (+51 more)
src/dimacs/: Lexer.mll  Mc2_dimacs.ml  Mc2_dimacs.mli  Parser.mly  Plugin_sat.ml  Plugin_sat.mli  Process.ml  Process.mli  dune  jbuild
src/ematching/: Mc2_ematching.ml  Mc2_ematching.mli  jbuild
src/lra/: Linexp.ml  Linexp.mli  Mc2_lra.ml  Mc2_lra.mli  dune  jbuild
src/main/: dune  mc2.ml
src/mcsat/: eclosure.ml  eclosure.mli  plugin_mcsat.ml
src/propositional/: Literal.ml  Literal.mli  Mc2_propositional.ml  Mc2_propositional.mli  dune  jbuild
src/sat/: .merlin  jbuild  sat.ml  sat.mli  type_sat.ml  type_sat.mli
src/scripts/: ddsmt_driver_error.py  ddsmt_driver_sat.py  ddsmt_driver_unsat.py  profile.sh
src/scripts/.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  ddsmt_driver_error.data.json  ddsmt_driver_error.meta.json  ddsmt_driver_sat.data.json  ddsmt_driver_sat.meta.json  ddsmt_driver_unsat.data.json  ddsmt_driver_unsat.meta.json  io.data.json  io.meta.json  mmap.meta.json  posix.meta.json  subprocess.data.json  subprocess.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
src/scripts/.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.meta.json
src/scripts/.mypy_cache/3.8/importlib/: __init__.meta.json  abc.meta.json
src/scripts/.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
src/smt/: expr_smt.ml  type_smt.ml
src/smtlib/: Ast.ml  Ast.mli  Lexer.mll  Locations.ml  Mc2_smtlib.ml  Mc2_smtlib.mli  Parse_ast.ml  Parser.mly  Process.ml  Process.mli  Typecheck.ml  Typecheck.mli  do_parse.ml  do_parse.mli  dune  jbuild  lexer.mll  parser.mly
src/solver/: solver.ml  tseitin.ml
src/tests/: .merlin  conf.toml  dune  jbuild  run  test_api.ml
src/tests/pigeon/: hole8.cnf
src/tests/reluplex/: make_relu_example.py  match_relu.py  query1.smt2  relu.sh  replace_relu.py  test.smt2  test_relu.smt2  test_relu1.smt2  test_relu2.smt2
src/tests/reluplex/ReluplexCav2017_smtlib_properties/: query2.smt2  query3.smt2  query4.smt2
src/tests/sat/: TelAviv-AmirMinimum.bpl_Iteration1_Loop_4-pieceTemplate.smt2  cpachecker-bmc.diskperf_false-unreach-call.i.cil.c.smt2  iso_brn_repgen018.smt2  test-000.cnf  test-002.smt2  test-007.smt2  test-010.smt2  test-014.cnf  uart-9.induction.cvc.smt2
src/tests/ssa/: ssa0432-003.cnf  ssa2670-130.cnf  ssa2670-141.cnf  ssa6288-047.cnf  ssa7552-038.cnf  ssa7552-158.cnf  ssa7552-159.cnf  ssa7552-160.cnf
src/tests/unsat/: NEQ032_size5.smt2  PEQ012_size3.smt2  eq_diamond10.smt2  eq_diamond100.smt2  gensys_icl015.smt2  iso_icl527.smt2  test-003.smt2  test-004.smt2  test-005.smt2  test-008.smt2  test-009.smt2  test-010.smt2  test-011.smt2  test-012.smt2  test-013.smt2
src/tools/: analyze.py  profile.sh
src/uf/: Mc2_uf.ml  Mc2_uf.mli  dune  jbuild
src/unin_sort/: Mc2_unin_sort.ml  Mc2_unin_sort.mli  dune  jbuild
starexec/: Makefile  starexec_description.txt
tests/: benchpress.sexp  conf.toml  dune  jbuild  run  test_api.ml
(+565 files in other folders)
