opam-version: "2.0"
name: "mc2"
version: "dev"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A mcsat-based SMT solver in pure OCaml"
authors: [
  "Sylvain Conchon"
  "Alain Mebsout"
  "Stephane Lecuyer"
  "Simon Cruanes"
  "Guillaume Bury"
]
license: "Apache"
tags: ["sat" "smt" "mcsat"]
homepage: "https://github.com/c-cube/mc2"
bug-reports: "https://github.com/c-cube/mc2/issues/"
depends: [
  "ocaml" {>= "4.03.0"}
  "zarith"
  "menhir"
  "containers"
  "iter"
  "smtlib-utils" { >= "0.1" & < "0.2" }
  "dune" {build}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
dev-repo: "git+https://github.com/c-cube/mc2.git"
