opam-version: "2.0"
name: "mc2"
version: "dev"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A mcsat-based SMT solver in pure OCaml"
authors: [
  "Simon Cruanes"
  "Guillaume Bury"
]
license: "Apache"
tags: ["sat" "smt" "mcsat"]
homepage: "https://github.com/c-cube/mc2"
bug-reports: "https://github.com/c-cube/mc2/issues/"
depends: [
  "ocaml" {>= "4.03.0"}
  "zarith"
  "menhir"
  "containers" { >= "2.6" }
  "iter"
  "dune" {build & >= "1.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]

