opam-version: "2.0"
name: "mc2"
version: "dev"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A mcsat-based SMT solver in pure OCaml"
authors: [
  "Simon Cruanes"
  "Guillaume Bury"
]
license: "Apache"
tags: ["sat" "smt" "mcsat"]
homepage: "https://github.com/c-cube/mc2"
bug-reports: "https://github.com/c-cube/mc2/issues/"
depends: [
  "ocaml" {>= "4.03.0"}
  "zarith"
  "menhir"
  "containers" { >= "3.0" & < "4.0" }
  "iter" { >= "1.0" }
  "smtlib-utils" { >= "0.1" & < "0.2" }
  "dune" { >= "1.11" }
  "odoc" {with-doc}
]
pin-depends: [
  ["msat.dev" "git+https://github.com/Gbury/mSAT.git#8eb32fa9abdb30665db7030c4861fe2229c0f671"]
]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/c-cube/mc2.git"
