; vim:ft=lisp:

; main binary

(executable
 (name main)
 (public_name mc2)
 (libraries containers sequence result mc2.core mc2.backend mc2.smtlib mc2.uf
   mc2.propositional mc2.unin_sort mc2.lra mc2.dimacs)
 (flags :standard -w +a-4-42-44-48-50-58-32-60@8 -color always)
 (ocamlopt_flags :standard -O3 -color always -unbox-closures
   -unbox-closures-factor 20))

(alias
 (name runtest)
 (deps
  (:< tests/test_api.exe))
 (action
  (run %{<})))
